# OtusTutorial2

./: .directory  .travis.yml  CMakeLists.txt  compare.h  filter.cpp  filter.h  filter.hpp  filterany.cpp  filterany.h  main.cpp  printv.cpp  printv.h  test_main.cpp  version.h.in
ip_filter/: filter.h  test_main.cpp
